--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3'
 
 services:
-  db:
+  db1:
     image: mysql:5.7
     volumes:
       - db_data:/var/lib/mysql
@@ -13,7 +13,7 @@ services:
       MYSQL_USER: wordpress
       MYSQL_PASSWORD: your_wordpress_password
 
-  redis:
+  redis1:
     image: redis:latest
     restart: always
     entrypoint: redis-server --appendonly yes --requirepass your-redis-password-here --maxmemory 512mb --maxmemory-policy allkeys-lru
@@ -24,29 +24,29 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
 
-  wordpress:
+  wordpress1:
     depends_on:
-      - db
-      - redis
+      - db1
+      - redis1
     image: wordpress:latest
     ports:
       - "8000:80"
     restart: always
     environment:
-      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_HOST: db1:3306
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: your_wordpress_password
       WORDPRESS_DB_NAME: wordpress
       WORDPRESS_CONFIG_EXTRA: |
         /* Redis configuration */
-        define('WP_REDIS_HOST', 'redis');
+        define('WP_REDIS_HOST', 'redis1');
         define('WP_REDIS_PORT', '6379');
         define('WP_REDIS_PASSWORD', 'your-redis-password-here');
         define('WP_CACHE_KEY_SALT', 'your-unique-salt-here');
         define('WP_CACHE', true);
-      REDIS_HOST: redis
+      REDIS_HOST: redis1
     volumes:
-      - wp_content:/var/www/html/wp-content     
+      - /root/zpub/:/var/www/html/     
 
   nginx:
     image: nginx:latest
@@ -55,11 +55,8 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
-      - wordpress
+      - wordpress1
 
 volumes:
   db_data:
-  wp_content:
   redis_data:
-
-
