--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
         server_name arthist.ir;
 
         location / {
-            proxy_pass http://wordpress:80;
+            proxy_pass http://wordpress1:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -33,5 +33,3 @@ http {
         }
     }
 }
-
-
