--- a/nginx.conf
+++ b/nginx.conf
@@ -2,11 +2,9 @@ user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log;
 pid /run/nginx.pid;
-
 events {
     worker_connections 1024;
 }
-
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
@@ -16,16 +14,26 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
-
     # Set the maximum allowed file size for uploads
     client_max_body_size 10M;
-
     server {
         listen 80;
         server_name arthist.ir;
 
         location / {
             proxy_pass http://wordpress1:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+    server {
+        listen 80;
+        server_name nimayeganeh.ir;
+
+        location / {
+            proxy_pass http://wordpress2:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
