--- a/nginx.conf
+++ b/nginx.conf
@@ -40,4 +40,16 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
+    server {
+        listen 80;
+        server_name nimaxmusic.ir;
+
+        location / {
+            proxy_pass http://wordpress3:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
 }
