--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,17 @@ http {
     # Set the maximum allowed file size for uploads
     client_max_body_size 10M;
     server {
+        listen 80 default_server;
+        server_name _;
+
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+
+        location / {
+            try_files $uri $uri/ =404;
+        }
+    }
+    server {
         listen 80;
         server_name arthist.ir;
 
